# kpi-calculator

./: .gitignore  pyproject.toml  requirements.txt
examples/: ejemplo1.json  ejemplo2.json
src/kpi_calc/: __init__.py  calculator.py  calendar_es.py  cli.py  config.py  formatting.py  intervals.py  io_json.py  models.py  parsing.py
src/ui/: app_streamlit.py
