[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kpi-calculator"
version = "0.1.0"
description = "Herramienta QA para calcular KPIs SLA/OLA con paradas (tiempo habil ES)."
requires-python = ">=3.10"
dependencies = [
  "holidays>=0.50",
  "streamlit>=1.36",
  "pandas>=2.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]